...
    "NavigationLink .buttonStyle" : {

    },
    "NavigationPath binding sheet" : {

    },
    "NavigationStack" : {
      "comment" : "Title of NavigationStack playground"
    },
    "Negative padding" : {

    },
    "Nested" : {
...
    "Playing" : {

    },
    "Playing..." : {

    },
    "Pop" : {

    },
    "Pop %lld / %lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
    "Show %@ Bar" : {

    },
    "Show Search" : {

    },
    "Showcase" : {
      "comment" : "localized string",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "عرض"
...
